--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -27,7 +27,7 @@
     </div>
 
     <footer>
-        Uyeda Inductrial @copy; Luis Capello
+        Uyeda Inductrial &copy; Luis Capello
     </footer>
 
 </body>
