--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Sistema Uyeda</title>
+    <title>
+        {% block title %}
+
+        {% endblock %}
+    </title>
 </head>
 
 <body>
