--- a/22-django/AprendiendoDjango/miapp/templates/pagina.html
+++ b/22-django/AprendiendoDjango/miapp/templates/pagina.html
@@ -1,4 +1,8 @@
-{% extends 'layout.html'%} {% block title %} Sistema Uyeda {& endblock %} {% block content %}
+{% extends 'layout.html' %}
+
+{% block title %} Sistema Uyeda {% endblock %}
+ 
+{% block content %}
 
 <h1> Pagina de mi Web</h1>
 <p>Creada por capello</p>
