--- a/22-django/AprendiendoDjango/miapp/templates/hola_mundo.html
+++ b/22-django/AprendiendoDjango/miapp/templates/hola_mundo.html
@@ -1,2 +1,10 @@
+{% extends 'layout.html' %}
+
+{% block title %} Hola Mundo en Djando{% endblock  %}
+
+{% block content %}
+
 <h1>Hola mundo con Django !!</h1>
 <h3> Creado por Capello </h3>
+
+{% endblock  %}
