--- a/22-django/AprendiendoDjango/miapp/templates/index.html
+++ b/22-django/AprendiendoDjango/miapp/templates/index.html
@@ -1,2 +1,10 @@
+{% extends 'layout.html' %}
+
+{% block title %} Inicio  {% endblock  %}
+
+{% block content %}
+
 <h1>Inicio</h1>
-<h2>Años hasta el 2050:</h2<
+<h2>Años hasta el 2050:</h2>
+
+{% endblock  %}
