--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +9,9 @@
         
         {% endblock %}
     </title>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles' %}" />
+
 </head>
 
 <body>
