--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +11,7 @@
         {% endblock %}
     </title>
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
 
 </head>
 
