--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -5,9 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        {% block title %}
-        
-        {% endblock %}
+        {% block title %} {% endblock %}
     </title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
@@ -15,25 +13,33 @@
 </head>
 
 <body>
-    <h1>Sistema Uyeda Industrial</h1>
-    <hr />
-    <ul>
-        <li>
-            <a href="/inicio">Inicio</a>
-        </li>
-        <li>
-            <a href="/hola-mundo">Hola Mundo</a>
-        </li>
-        <li>
-            <a href="/pagina-pruebas">Pagina de Prueba</a>
-        </li>
-    </ul>
-    <hr />
+
+    <!-- Cabecera de la Pagina -->
+    <header>
+        <div>
+            <!-- logo -->
+            <h1>Sitema Uyeda</h1>
+        </div>
+    </header>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="/inicio">Inicio</a>
+            </li>
+            <li>
+                <a href="/hola-mundo">Hola Mundo</a>
+            </li>
+            <li>
+                <a href="/pagina-pruebas">Pagina de Prueba</a>
+            </li>
+        </ul>
+    </nav>
 
     <div id="content">
+        <h2 class="title"> Titulo </h2>
         {% block content %} {% endblock %}
     </div>
-    <hr />
 
     <footer>
         Uyeda Inductrial &copy; Luis Capello
