--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -16,8 +16,9 @@
 
     <!-- Cabecera de la Pagina -->
     <header>
-        <div>
+        <div id="logotipo">
             <!-- logo -->
+            <img src="{% static 'img/logo2.png' %}" alt="logo uyeda">
             <h1>Sitema Uyeda</h1>
         </div>
     </header>
