--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -19,7 +19,7 @@
         <div id="logotipo">
             <!-- logo -->
             <img src="{% static 'img/logo2.png' %}" alt="logo uyeda">
-            <h1>Sitema Uyeda</h1>
+            <h1>Sitema de Cotización Uyeda</h1>
         </div>
     </header>
 
