--- a/22-django/AprendiendoDjango/miapp/static/css/styles.css
+++ b/22-django/AprendiendoDjango/miapp/static/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #1BA9B6;
+    background-color: #7FB3D5;
 }
 
 
@@ -17,8 +17,9 @@ body {
 header {
     width: 1212px;
     height: 140px;
-    background-color: #000;
+    background-color: #000080;
     margin: auto;
+    box-shadow: 0px 30px 30px #212F3D
 }
 
 #logotipo {
@@ -42,5 +43,35 @@ header {
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: lighter;
-    color: #42a096;
+    color: #dd1717;
+}
+
+
+/* estilos barra navegación */
+
+nav {
+    width: 1250px;
+    height: 40px;
+    margin: 0 auto;
+    background-color: #1b1e1f;
+    border: 2px, solid #333333;
+    box-shadow: 0px 22px 22px #212F3D;
+    font-size: 13px;
+}
+
+nav ul {
+    list-style: none;
+    text-decoration: none;
+}
+
+nav ul li {
+    line-height: 40px;
+    float: left;
+}
+
+nav ul li a {
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #d1d4d6;
 }
