--- a/22-django/AprendiendoDjango/miapp/static/css/styles.css
+++ b/22-django/AprendiendoDjango/miapp/static/css/styles.css
@@ -55,8 +55,8 @@ nav {
     margin: 0 auto;
     background-color: #1b1e1f;
     border: 2px, solid #333333;
-    box-shadow: 0px 22px 22px #212F3D;
-    font-size: 13px;
+    box-shadow: 0px 22px 22px #566573;
+    font-size: 17px;
 }
 
 nav ul {
@@ -71,7 +71,42 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: #d1d4d6;
+}
+
+nav ul li a:hover {
+    background: #7FB3D5;
+    box-sizing: 0px 0px 15px #444 inset;
+    color: white;
+    transition: all 900ms;
+}
+
+.barra {
+    width: 1250px;
+    margin: 0 auto;
+    margin-bottom: 140px;
+}
+
+.esquina-izquierda {
+    display: block;
+    border-left: 20px solid transparent;
+    border-top: 10px solid #2b2f30;
+    float: left;
+}
+
+.esquina-derecha {
+    display: block;
+    border-right: 20px solid transparent;
+    border-top: 10px solid #2b2f30;
+    float: right;
+}
+
+.relleno-barra {
+    display: block;
+    width: 1210px;
+    height: 10px;
+    background: #2b2f30;
+    float: left;
 }
