--- a/22-django/AprendiendoDjango/miapp/static/css/styles.css
+++ b/22-django/AprendiendoDjango/miapp/static/css/styles.css
@@ -86,7 +86,6 @@ nav ul li a:hover {
 .barra {
     width: 1250px;
     margin: 0 auto;
-    margin-bottom: 140px;
 }
 
 .esquina-izquierda {
@@ -109,4 +108,24 @@ nav ul li a:hover {
     height: 10px;
     background: #2b2f30;
     float: left;
+}
+
+
+/* Estilos contenido */
+
+#content {
+    width: 1212px;
+    min-height: 930px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.box {
+    background: #B8DCEB;
+    width: 95%;
+    min-height: 930px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    margin: 0 auto;
 }
