--- a/22-django/AprendiendoDjango/miapp/static/css/styles.css
+++ b/22-django/AprendiendoDjango/miapp/static/css/styles.css
@@ -127,5 +127,25 @@ nav ul li a:hover {
     min-height: 930px;
     padding: 20px;
     border: 1px solid #ddd;
+    border-radius: 10px;
     margin: 0 auto;
+}
+
+.title {
+    color: #696969;
+    letter-spacing: 1px;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+footer {
+    width: 1250px;
+    background-color: #000080;
+    border: 1px solid #333;
+    color: #d1d4d6;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0px 0px 20px #566573;
 }
