--- a/22-django/AprendiendoDjango/miapp/templates/hola_mundo.html
+++ b/22-django/AprendiendoDjango/miapp/templates/hola_mundo.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>Hola mundo con Django !!</h1>
+<h1 class="title">Hola mundo con Django !!</h1>
 <h3> Creado por Capello </h3>
 
 {% endblock  %}
