--- a/22-django/AprendiendoDjango/miapp/templates/pagina.html
+++ b/22-django/AprendiendoDjango/miapp/templates/pagina.html
@@ -4,7 +4,7 @@
  
 {% block content %}
 
-<h1> Pagina de mi Web</h1>
+<h1 class="title"> Pagina de mi Web</h1>
 <p>Creada por capello</p>
 
 {% endblock %}
