--- a/22-django/AprendiendoDjango/miapp/static/css/styles.css
+++ b/22-django/AprendiendoDjango/miapp/static/css/styles.css
@@ -140,7 +140,7 @@ nav ul li a:hover {
 
 footer {
     width: 1250px;
-    background-color: #000080;
+    background-color: #1b1e1f;
     border: 1px solid #333;
     color: #d1d4d6;
     text-align: center;
