--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -138,6 +138,12 @@ nav ul li a:hover {
     margin-bottom: 10px;
 }
 
+.date {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 footer {
     width: 1250px;
     background-color: #1b1e1f;
