--- a/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
@@ -26,8 +26,13 @@
     <nav>
         <ul>
             <li>
-                <a href="/inicio">Inicio</a>
+                <a href="{% url 'index' %}">Inicio</a>
             </li>
+            {% for page in pages %}
+                <li>
+                    <a href="#">{{page.1}}</a>
+                </li>
+            {% endfor %}
         </ul>
     </nav>
     <div class="barra">
