--- a/22-django/ProyectoDjango/pages/templates/pages/page.html
+++ b/22-django/ProyectoDjango/pages/templates/pages/page.html
@@ -9,6 +9,6 @@
     <span class = "date" >{{page.created_at}}</span>
 
     <p class = "content" >
-        {{page.content}}
+        {{page.content|safe}}
     </p>
 {% endblock %}
