--- a/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
@@ -33,6 +33,9 @@
                     <a href="{% url 'page' page.2 %}">{{page.1}}</a>
                 </li>
             {% endfor %}
+            <li>
+                <a href="{% url 'resgister' %}">Registro</a>
+            </li>
         </ul>
     </nav>
     <div class="barra">
