--- a/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
@@ -34,7 +34,7 @@
                 </li>
             {% endfor %}
             <li>
-                <a href="{% url 'resgister' %}">Registro</a>
+                <a href="{% url 'register' %}">Registro</a>
             </li>
         </ul>
     </nav>
