--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -148,6 +148,40 @@ nav ul li a:hover {
     line-height: 25px;
 }
 
+.logo-header {
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-image: url(../img/usuario.png);
+    width: 128px;
+    height: 128px; 
+}
+
+form {
+    width: 500px;
+    height: 600px;
+    border-radius: 20px;
+    background-image: linear-gradient(-225deg, #77FFD2 0%, #6297DB 48%, #1EECFF 100%);
+    border: 10px double #333;
+    margin: 0 auto;
+    color: #d1d4d6;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0px 0px 20px #566573;
+    font-size: 20px;
+    color: black;
+ }
+
+ input.boton{
+    width: 70px;
+    height: 40px;
+    font-size: 20px;
+    border-radius: 10px;
+    background-image: linear-gradient(-20deg, #616161 0%, #9bc5c3 100%);
+ }
+
 footer {
     width: 1250px;
     background-color: #1b1e1f;
