--- a/22-django/ProyectoDjango/mainapp/templates/users/register.html
+++ b/22-django/ProyectoDjango/mainapp/templates/users/register.html
@@ -5,4 +5,23 @@
 
 {% block content %}
     <h1>{{title}}</h1>
+
+    <form class="form" method="post" action="">
+        <div class="logo-header"></div>
+        
+        {% csrf_token %}
+
+        {% comment  %}
+            {{register_form.as_p}}
+        {% endcomment %}
+        
+        {% for field in register_form %}
+            {{field.label}}
+            {{field}}
+        {% endfor %}
+
+        <input class="boton" type="submit" values="Registrarse"/>
+
+    </form>
+
 {% endblock %}
