--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background-color: #7FB3D5;
+    /*background-color: #7FB3D5;*/
+    background-image: radial-gradient(circle, #3e7fc6, #0092cf, #00a3ce, #00b3c5, #00c0b7, #00c0b7, #00c0b7, #00c0b7, #00b3c5, #00a3ce, #0092cf, #3e7fc6);
 }
 
 
@@ -155,14 +156,19 @@ nav ul li a:hover {
     margin-bottom: 15px;
     background-image: url(../img/usuario.png);
     width: 128px;
-    height: 128px; 
+    height: 128px;
 }
 
 form {
     width: 500px;
     height: 600px;
     border-radius: 20px;
-    background-image: linear-gradient(-225deg, #77FFD2 0%, #6297DB 48%, #1EECFF 100%);
+    background: #000428;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #004e92, #000428);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #004e92, #000428);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border: 10px double #333;
     margin: 0 auto;
     color: #d1d4d6;
@@ -171,16 +177,23 @@ form {
     padding-bottom: 10px;
     box-shadow: 0px 0px 20px #566573;
     font-size: 20px;
-    color: black;
- }
+    color: white;
+}
 
- input.boton{
+input.boton {
     width: 70px;
     height: 40px;
+    color: white;
     font-size: 20px;
     border-radius: 10px;
-    background-image: linear-gradient(-20deg, #616161 0%, #9bc5c3 100%);
- }
+    background: #ee0979;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #ff6a00, #ee0979);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #ff6a00, #ee0979);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
 footer {
     width: 1250px;
