--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -159,34 +159,43 @@ nav ul li a:hover {
     height: 128px;
 }
 
-form {
-    width: 500px;
-    height: 600px;
+.box form {
+    width: 50%;
+    height: 700px;
     border-radius: 20px;
-    background: #000428;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #004e92, #000428);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #004e92, #000428);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border: 10px double #333;
     margin: 0 auto;
-    color: #d1d4d6;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    box-shadow: 0px 0px 20px #566573;
-    font-size: 20px;
-    color: white;
+    background-image: linear-gradient( 110.8deg, rgba(32, 178, 170, 1) 79.9%, rgba(5, 124, 159, 1) 79.9%);
+    box-shadow: 0px 32px 40px #000;
+}
+
+.box form input,
+.box form label {
+    display: block;
+    padding: 5px;
+    padding-left: 0px;
+    margin: 0 auto;
+    width: 90%;
+}
+
+.box form input[type="text"],
+.box form input[type="email"],
+.box form input[type="password"],
+.box form textarea,
+.box form select {
+    width: 90%;
+    margin-bottom: 10px;
+}
+
+.box form select {
+    width: 100px;
 }
 
 input.boton {
-    width: 70px;
-    height: 40px;
     color: white;
     font-size: 20px;
     border-radius: 10px;
     background: #ee0979;
+    box-shadow: 0px 22px 30px #000;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to top, #ff6a00, #ee0979);
     /* Chrome 10-25, Safari 5.1-6 */
