--- a/22-django/ProyectoDjango/mainapp/templates/users/register.html
+++ b/22-django/ProyectoDjango/mainapp/templates/users/register.html
@@ -6,7 +6,9 @@
 {% block content %}
     <h1>{{title}}</h1>
 
-    <form class="form" method="post" action="">
+    {{register_form.errors}}
+
+    <form method="post" action="">
         <div class="logo-header"></div>
         
         {% csrf_token %}
@@ -16,7 +18,7 @@
         {% endcomment %}
         
         {% for field in register_form %}
-            {{field.label}}
+            <label>{{field.label}}</label>
             {{field}}
         {% endfor %}
 
