--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -130,6 +130,7 @@ nav ul li a:hover {
     border: 1px solid #ddd;
     border-radius: 10px;
     margin: 0 auto;
+    box-shadow: 0px 32px 40px #000;
 }
 
 .title {
