--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -131,6 +131,7 @@ nav ul li a:hover {
     border-radius: 10px;
     margin: 0 auto;
     box-shadow: 0px 32px 40px #000;
+    border: 1px solid;
 }
 
 .title {
@@ -163,7 +164,7 @@ nav ul li a:hover {
 .box form {
     width: 50%;
     height: 700px;
-    border-radius: 20px;
+    border-radius: 4em 1em;
     margin: 0 auto;
     background-image: linear-gradient( 110.8deg, rgba(32, 178, 170, 1) 79.9%, rgba(5, 124, 159, 1) 79.9%);
     box-shadow: 0px 32px 40px #000;
@@ -176,6 +177,7 @@ nav ul li a:hover {
     padding-left: 0px;
     margin: 0 auto;
     width: 90%;
+    font-size: 17px;
 }
 
 .box form input[type="text"],
@@ -195,14 +197,8 @@ input.boton {
     color: white;
     font-size: 20px;
     border-radius: 10px;
-    background: #ee0979;
     box-shadow: 0px 22px 30px #000;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #ff6a00, #ee0979);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #ff6a00, #ee0979);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-image: linear-gradient( 149.5deg, rgba(89, 89, 89, 0.95) 50.6%, rgba(0, 0, 0, 1) 71.4%);
 }
 
 footer {
