--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -159,11 +159,14 @@ nav ul li a:hover {
     background-image: url(../img/usuario.png);
     width: 128px;
     height: 128px;
+    box-shadow: 7px 22px 22px #000;
+    border-radius: 50%;
 }
 
 .box form {
     width: 50%;
     height: 700px;
+    padding-top: 10px;
     border-radius: 4em 1em;
     margin: 0 auto;
     background-image: linear-gradient( 110.8deg, rgba(32, 178, 170, 1) 79.9%, rgba(5, 124, 159, 1) 79.9%);
