--- a/22-django/ProyectoDjango/mainapp/templates/users/login.html
+++ b/22-django/ProyectoDjango/mainapp/templates/users/login.html
@@ -19,7 +19,7 @@
 
     {% csrf_token %}
 
-    <label for="username">Introduce tu Email</label>
+    <label for="username">Introduce tu numero de Empleado</label>
     <input type="text" name="username" />
 
     <label for="password">Contraseña</label>
