--- a/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
+++ b/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
@@ -1,3 +1,5 @@
+
+
 {% extends 'layouts/layout.html' %}
 
 {% block title %} {{title}} {% endblock %}
@@ -5,6 +7,9 @@
 
 {% block content %}
     <h1>{{title}}</h1>
+
+    <h2>Bienvenido, {{request.user.first_name}} {{user.last_name}}</h2>
+
 {% endblock %}
 
 
