--- a/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
@@ -7,6 +7,7 @@
     <title>
         {% block title %} {% endblock %}
     </title>
+    
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
 
@@ -26,24 +27,24 @@
     <nav>
         <ul>
             {% if user.email %}
-                <li>
-                    <a href="{% url 'index' %}">Inicio</a>
-                </li>
-                {% for page in pages %}
-                    <li>
-                        <a href="{% url 'page' page.2 %}">{{page.1}}</a>
-                    </li>
-                {% endfor %}
-                <li>
-                    <a href="{% url 'logout' %}">Cerrar Sesión</a>
-                </li>
-            {% else %}
-{% comment %}                 <li>
-                    <a href="{% url 'register' %}">Registro</a>
-                </li> {% endcomment %}
-                <li>
-                    <a href="{% url 'login' %}">Login</a>
-                </li>
+            <li>
+                <a href="{% url 'index' %}">Inicio</a>
+            </li>
+            {% for page in pages %}
+            <li>
+                <a href="{% url 'page' page.2 %}">{{page.1}}</a>
+            </li>
+            {% endfor %}
+            <li>
+                <a href="{% url 'logout' %}">Cerrar Sesión</a>
+            </li>
+            {% else %} {% comment %}
+            <li>
+                <a href="{% url 'register' %}">Registro</a>
+            </li> {% endcomment %}
+            <li>
+                <a href="{% url 'login' %}">Login</a>
+            </li>
             {% endif %}
         </ul>
     </nav>
