--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -114,6 +114,12 @@ nav ul li a:hover {
 
 /* Estilos contenido */
 
+hr {
+    border: 0;
+    height: 12px;
+    box-shadow: inset 0 12px 12px -12px orange;
+}
+
 #content {
     width: 1212px;
     min-height: 530px;
