--- a/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
+++ b/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
@@ -7,9 +7,14 @@
 
 {% block content %}
     <h1>{{title}}</h1>
+    <hr/>
+    {% if user.email %}
+        <h2>Bienvenido, {{request.user.first_name}} {{user.last_name}}</h2>
 
-    <h2>Bienvenido, {{request.user.first_name}} {{user.last_name}}</h2>
+    {% else %}
+        <h2>Inicia sesión en el sistema</h2>
 
+    {% endif %}
 {% endblock %}
 
 
