--- a/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProyectoDjango/mainapp/templates/layouts/layout.html
@@ -20,7 +20,7 @@
         <div id="logotipo">
             <!-- logo -->
             <img src="{% static 'img/logo2.png' %}" alt="logo uyeda">
-            <h1>Sistema de Cotización</h1>
+            <h1>Solicitud de Cotización</h1>
         </div>
     </header>
 
