--- a/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
+++ b/22-django/ProyectoDjango/mainapp/templates/mainapp/index.html
@@ -10,6 +10,7 @@
     <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;">
     {% if user.email %}
         <h2 class = "content">Bienvenido, {{request.user.first_name}} {{user.last_name}}</h2>
+    <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;">
 
     {% else %}
         <h2 class = "content">Inicia sesión en el sistema</h2>
