--- a/22-django/ProyectoDjango/mainapp/templates/mainapp/form.html
+++ b/22-django/ProyectoDjango/mainapp/templates/mainapp/form.html
@@ -1,19 +1,28 @@
  {% extends 'layouts/layout.html' %} 
- {% block title %} {{title}} {% endblock %}
+ {% block title %} 
+    {{title}} 
+{% endblock %} 
 
-  {% block content %}
+{% block content %}
 
-<!--<h1 class="title">{{title}}</h1>-->
-<!-- CSS only 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
--->
-    <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;"> 
+        <!--<h1 class="title">{{title}}</h1>-->
+        <!-- CSS only 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        -->
+        <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;"> 
     {% if user.email %}
-        <h2 class="content">Realiza una Nueva Cotización {{request.user.first_name}} {{user.last_name}}</h2>
+        <h1 class="content">Realiza una Nueva Cotización {{request.user.first_name}} {{user.last_name}}</h1>
+        <h2 class="content">Solicitud de cotización flexografía</h2>
 
-    <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;"> 
+        <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;">
+
+        <div class="form-cot">
+            <label for="">No. cotización</label>
+            <input type="text" name="title" placeholder="numero de cotización"> 
+        </div>
+
     {% else %}
         <h2 class="content">Inicia sesión en el sistema</h2>
     {% endif %} 
-    
-    {% endblock %}
+
+{% endblock %}
