--- a/22-django/ProyectoDjango/mainapp/templates/mainapp/form.html
+++ b/22-django/ProyectoDjango/mainapp/templates/mainapp/form.html
@@ -1,28 +1,41 @@
- {% extends 'layouts/layout.html' %} 
- {% block title %} 
-    {{title}} 
-{% endblock %} 
+ {% extends 'layouts/layout.html' %} {% block title %} {{title}} {% endblock %} {% block content %}
 
-{% block content %}
+<!--<h1 class="title">{{title}}</h1>-->
 
-        <!--<h1 class="title">{{title}}</h1>-->
-        <!-- CSS only 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        -->
-        <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;"> 
-    {% if user.email %}
-        <h1 class="content">Realiza una Nueva Cotización {{request.user.first_name}} {{user.last_name}}</h1>
-        <h2 class="content">Solicitud de cotización flexografía</h2>
+<hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;"> {% if user.email %}
+<h1 class="content">Realiza una Nueva Cotización {{request.user.first_name}} {{user.last_name}}</h1>
+<h2 class="content">Solicitud de cotización flexografía</h2>
 
-        <hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;">
+<hr style="border: 3px solid #666; border-radius: 300px/10px; height: 0px; text-align: center;">
 
-        <div class="form-cot">
-            <label for="">No. cotización</label>
-            <input type="text" name="title" placeholder="numero de cotización"> 
-        </div>
+<div class="cotizacion">
+    <div class="form-cabecera">
+        <label for="fecha">Fecha</label>
+        <input type="text" name="fecha" placeholder="fecha">
+        <label for="Tipo">Tipo</label>
+        <input type="text" name="cliente">
+        <label for="folio">Folio</label>
+        <input type="text" name="folio" placeholder="folio">
 
-    {% else %}
-        <h2 class="content">Inicia sesión en el sistema</h2>
-    {% endif %} 
+        <label for="numero_cliente"># Cliente</label>
+        <input type="text" name="cliente" placeholder="No Cliente">
+        <label for="nombre_cliente"> Cliente</label>
+        <input type="text" name="cliente" placeholder="Cliente">
+        <label for="prensa">Prensa</label>
+        <input type="text" name="prensa">
+        <label for="solicita">Solicita</label>
+        <label for="nombre">{{request.user.first_name}} {{user.last_name}}</label>
+    </div>
+    <div class="form-cot">
+        <label for="">No. cotización</label>
+        <input type="text" name="title" placeholder="numero de cotización">
+        <label for="codigo">Codigo Uyeda</label>
+        <input type="text" name="codigo" placeholder="Codigo">
 
-{% endblock %}
+    </div>
+
+</div>
+
+{% else %}
+<h2 class="content">Inicia sesión en el sistema</h2>
+{% endif %} {% endblock %}
