--- a/22-django/ProyectoDjango/mainapp/static/css/styles.css
+++ b/22-django/ProyectoDjango/mainapp/static/css/styles.css
@@ -167,9 +167,18 @@ nav ul li a:hover {
     border-radius: 50%;
 }
 
-.box form {
+.form-cot {
+    display: block;
     width: 50%;
-    height: 700px;
+    height: 600px;
+    padding-top: 10px;
+    border-radius: 4em 1em;
+    margin: 30px auto;
+}
+
+.box2 form {
+    width: 50%;
+    height: 600px;
     padding-top: 10px;
     border-radius: 4em 1em;
     margin: 30px auto;
