--- a/22-django/ProyectoDjango/mainapp/templates/users/login.html
+++ b/22-django/ProyectoDjango/mainapp/templates/users/login.html
@@ -1,33 +1,30 @@
-{% extends 'layouts/layout.html' %} 
-
-{% block title %} {{title}} {% endblock %} 
-
-{% block content %}
+{% extends 'layouts/layout.html' %} {% block title %} {{title}} {% endblock %} {% block content %}
 <h1>{{title}}</h1>
 
-{% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-warning">
-            {{message}}
-        </div>
-    {% endfor %}
+{% if messages %} {% for message in messages %}
+<div class="alert alert-warning">
+    {{message}}
+</div>
+{% endfor %} {% endif %}
 
-{% endif %}
+<div class="box2">
+    <form method="post" action="">
 
-<form method="post" action="">
-    <div class="logo-header"></div>
+        <div class="logo-header"></div>
 
-    {% csrf_token %}
+        {% csrf_token %}
 
-    <label for="username">Introduce tu numero de Empleado</label>
-    <input type="text" name="username" />
+        <label for="username">Introduce tu numero de Empleado</label>
+        <input type="text" name="username" />
 
-    <label for="password">Contraseña</label>
-    <input type="password" name="password" />
+        <label for="password">Contraseña</label>
+        <input type="password" name="password" />
 
 
-    <input class="boton" type="submit" values="Login" />
+        <input class="boton" type="submit" values="Login" />
 
-</form>
+
+    </form>
+</div>
 
 {% endblock %}
